--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -339,8 +339,8 @@ set_real_ip_from 2a04:52c0:101:46a::;
 set_real_ip_from 2a04:52c0:102:46e0::1;
 set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
-set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -558,7 +558,6 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b02b:1337:3;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b03b:1337:4;
-set_real_ip_from 2a0e:97c0:3e3:460:1337:b04b:1337:5;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b05b:1337:6;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b20b:1337:9;
@@ -567,7 +566,6 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
 set_real_ip_from 2a0e:97c0:3e3:b6::1;
 set_real_ip_from 2a0e:97c0:3ea:882::1;
-set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
@@ -577,7 +575,6 @@ set_real_ip_from 2a0e:bfc0:0:5::2;
 set_real_ip_from 2a0e:bfc2:0:2c::1;
 set_real_ip_from 2a0e:bfc7:0:3::2d83;
 set_real_ip_from 2a0e:e701:1198::1;
-set_real_ip_from 2a0e:fa00:0:30::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:cdc6:500:11e3::2;
 set_real_ip_from 2a0f:df00:0:255::194;
@@ -626,7 +623,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:240;
 set_real_ip_from 2a12:a800:2:1:45:138:16:248;
 set_real_ip_from 2a12:a800:2:1:45:138:16:42;
 set_real_ip_from 2a12:a800:2:1:45:138:16:69;
-set_real_ip_from 2a12:a800:2:1:45:138:16:76;
 set_real_ip_from 2a12:a800:2:1:45:141:215:110;
 set_real_ip_from 2a12:a800:2:1:45:141:215:111;
 set_real_ip_from 2a12:a800:2:1:45:141:215:114;
