--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -162,7 +162,6 @@ allow 152.32.206.127;
 allow 152.53.106.19;
 allow 152.53.133.14;
 allow 152.53.53.243;
-allow 154.12.178.87;
 allow 154.16.116.61;
 allow 154.41.95.1;
 allow 154.41.95.2;
@@ -759,6 +758,7 @@ allow 209.141.41.25;
 allow 209.141.45.141;
 allow 209.141.45.81;
 allow 209.141.46.203;
+allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
@@ -827,6 +827,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -836,6 +837,10 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.28;
 allow 23.191.200.29;
+allow 23.191.200.3;
+allow 23.191.200.30;
+allow 23.191.200.31;
+allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -849,7 +854,6 @@ allow 2400:d320:2261:6860::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
-allow 2403:18c0:5:2c7:64c4:58ff:fec4:8129;
 allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
@@ -1313,6 +1317,7 @@ allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc2:0:2c::1;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:e701:1198::1;
+allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
@@ -1401,7 +1406,6 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1428,6 +1432,7 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1602,6 +1607,7 @@ allow 57.129.91.235;
 allow 5.79.66.19;
 allow 5.8.18.30;
 allow 5.8.18.99;
+allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.84.146;
 allow 62.72.47.105;
@@ -1703,14 +1709,12 @@ allow 91.219.236.91;
 allow 91.227.114.153;
 allow 91.92.109.126;
 allow 91.92.109.43;
-allow 92.113.144.149;
 allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.113.25.239;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
-allow 93.88.75.35;
 allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
